--- a/config.cfg
+++ b/config.cfg
@@ -2,6 +2,8 @@ loss = 'cross_entropy'
 device = 'cpu'
 data_type = 'folder'
 data = 'data/mnist'
+train_folder = 'training'
+valid_folder = 'testing'
 model = 'simple'
 neg_classes = []
 workers = 4
