--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 loss = 'cross_entropy'
 device = 'cpu'
 data_type = 'folder'
-data = 'data/mnist'
+data = 'data/mnist_png'
 train_folder = 'training'
 valid_folder = 'testing'
 model = 'simple'
