--- a/config.cfg
+++ b/config.cfg
@@ -17,9 +17,9 @@ pretrained = True
 balance = True 
 folder = 'trained_models/' + model
 resume =  folder + '/checkpoint.th'
-lr = 0.001
+lr_init = 0.001
+image_resize_init = 32
 schedule = [
-   {"iter": (0, 100), "lr": 0.001, "image_size": 32},
 ]
 eval_image_resize = 32
 eval_image_center_crop = 32
