--- a/config.cfg
+++ b/config.cfg
@@ -1,17 +1,16 @@
-loss = 'cross_entropy'
-device = 'cuda'
+device = 'cpu'
 data_type = 'folder'
 data = 'data/mnist_png'
 train_folder = 'training'
 valid_folder = 'testing'
-model = 'simple'
+model = 'modular_simple'
 workers = 4
 epochs = 300
 batch_size = 32
 momentum = 0.9
 weight_decay = 1e-4
 print_freq = 500
-eval_interval = 10
+eval_interval = 1
 folder = 'trained_models/' + model
 resume =  folder + '/checkpoint.th'
 lr_init = 0.001
